--- a/public/backend/css/custom_Style.css
+++ b/public/backend/css/custom_Style.css
@@ -12,3 +12,9 @@
     -moz-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
+.message{
+    position: fixed;
+    z-index: 99;
+    right: 100px;
+    top: 100px;
+}
